implemented tus create improved download moved to vavr values